Fixed naming convention and update CMakeLists

--- a/GLTF/CMakeLists.txt
+++ b/GLTF/CMakeLists.txt
@@ -1,6 +1,13 @@
-cmake_minimum_required (VERSION 3.1.0)
-project (GLTF)
+cmake_minimum_required(VERSION 3.1.0)
+
+set(PROJECT_NAME GLTF)
+
+project(GLTF)
 add_compile_options(-std=c++11)
-include_directories (include)
-file (GLOB SOURCES "src/*.cpp")
-add_library(GLTF ${SOURCES})
+
+# GLTF
+include_directories(include)
+file(GLOB HEADERS "include/*.h")
+file(GLOB SOURCES "src/*.cpp")
+
+add_library(GLTF ${HEADERS} ${SOURCES})
