--- a/GLTF/CMakeLists.txt
+++ b/GLTF/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.1.0)
 
 set(PROJECT_NAME GLTF)
 
-project(GLTF)
+project(${PROJECT_NAME})
 add_compile_options(-std=c++11)
 
 # GLTF
