--- a/dependencies/OpenCOLLADA/modules/COLLADAFramework/COLLADABaseUtils/CMakeLists.txt
+++ b/dependencies/OpenCOLLADA/modules/COLLADAFramework/COLLADABaseUtils/CMakeLists.txt
@@ -19,11 +19,11 @@ file(GLOB MATH_SOURCES "${PROJECT_PATH}/src/Math/*.cpp")
 # UTF
 include_directories(${BASE_PATH}/Externals/UTF/include)
 file(GLOB UTF_HEADERS "${BASE_PATH}/Externals/UTF/include/*.h")
-file(GLOB UTF_SOURCES "${BASE_PATH}/Externals/UTF/src/*.cpp")
+file(GLOB UTF_SOURCES "${BASE_PATH}/Externals/UTF/src/*.c")
 
 # PCRE
 include_directories(${BASE_PATH}/Externals/pcre/include)
 file(GLOB PCRE_HEADERS "${BASE_PATH}/Externals/pcre/include/*.h")
-file(GLOB PCRE_SOURCES "${BASE_PATH}/Externals/pcre/src/*.cpp")
+file(GLOB PCRE_SOURCES "${BASE_PATH}/Externals/pcre/src/*.c")
 
 add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES} ${MATH_HEADERS} ${MATH_SOURCES} ${UTF_HEADERS} ${UTF_SOURCES} ${PCRE_HEADERS} ${PCRE_SOURCES})
