Fixed some cmake issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,11 @@ option(test "Build all tests." OFF)
 # RapidJSON
 include_directories(GLTF/dependencies/rapidjson/include)
 
-# COLLADASaxFrameworkLoader/BaseUtils/Framework
+# COLLADASaxFrameworkLoader/BaseUtils/Framework, GeneratedSaxParser
 include_directories(dependencies/OpenCOLLADA/OpenCOLLADA/COLLADASaxFrameworkLoader/include)
 include_directories(dependencies/OpenCOLLADA/OpenCOLLADA/COLLADABaseUtils/include)
 include_directories(dependencies/OpenCOLLADA/OpenCOLLADA/COLLADAFramework/include)
+include_directories(dependencies/OpenCOLLADA/OpenCOLLADA/GeneratedSaxParser/include)
 add_subdirectory(dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader)
 
 # GLTF
@@ -29,7 +30,7 @@ add_subdirectory(GLTF)
 # COLLADA2GLTF_lib
 include_directories(include)
 file(GLOB LIB_HEADERS "include/*.h")
-set(LIB_SOURCES src/COLLADA2GLTFWriter.cpp)
+set(LIB_SOURCES src/COLLADA2GLTFWriter.cpp src/COLLADA2GLTFExtrasHandler.cpp)
 add_library(${PROJECT_NAME}_lib ${LIB_HEADERS} ${LIB_SOURCES})
 target_link_libraries(${PROJECT_NAME}_lib GLTF COLLADASaxFrameworkLoader)
 
