Added argparse to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,12 @@ set(LIB_SOURCES src/COLLADA2GLTFWriter.cpp src/COLLADA2GLTFExtrasHandler.cpp)
 add_library(${PROJECT_NAME}_lib ${LIB_HEADERS} ${LIB_SOURCES})
 target_link_libraries(${PROJECT_NAME}_lib GLTF COLLADASaxFrameworkLoader)
 
+# argparse
+include_directories(dependencies/argparse/argparse/)
+add_subdirectory(dependencies/argparse/modules/argparse)
+
 add_executable(${PROJECT_NAME} src/main.cpp)
-target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_lib)
+target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_lib argparse)
 
 if(test)
   enable_testing()
