--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "dependencies/googletest"]
 	path = GLTF/dependencies/googletest
 	url = git@github.com:google/googletest.git
+[submodule "dependencies/argparse/argparse"]
+	path = dependencies/argparse/argparse
+	url = git@github.com:cofyc/argparse.git
