Use https submodules for travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: cpp
+git:
+    submodules: false
+before_install:
+    - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+    - git submodule update --init --recursive
 install: mkdir build && cd build
 script: cmake -Dtest=ON .. && make test
 compiler: g++
