Just build for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ before_install:
     - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
     - git submodule update --init --recursive
 install: mkdir build && cd build
-script: cmake -Dtest=ON .. && make test
+script: cmake -Dtest=ON
 compiler: g++
