--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: cpp
+addons:
+  apt:
+    sources:
+      - george-edison55-precise-backports # cmake 3.2.3 / doxygen 1.8.3
+    packages:
+      - cmake
+      - cmake-data
 git:
     submodules: false
 before_install:
