Run Unit tests in Travis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,8 @@ if(test)
   file(GLOB TEST_HEADERS "test/include/*.h")
   file(GLOB TEST_SOURCES "test/src/*.cpp")
 
-  add_executable(${PROJECT_NAME}_TEST ${TEST_HEADERS} ${TEST_SOURCES})
-  target_link_libraries(${PROJECT_NAME}_TEST  ${PROJECT_NAME}_lib GLTF gtest)
+  add_executable(${PROJECT_NAME}_test ${TEST_HEADERS} ${TEST_SOURCES})
+  target_link_libraries(${PROJECT_NAME}_test  ${PROJECT_NAME}_lib GLTF gtest)
 
-  add_test(COLLADA2GLTFWriterTest ${PROJECT_NAME}_TEST)
+  add_test(COLLADA2GLTFWriterTest ${PROJECT_NAME}_test)
 endif()
