--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ git:
 before_install:
     - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
     - git submodule update --init --recursive
-script: mkdir build && cd build && cmake -Dtest=ON ..
+script: mkdir build && cd build && cmake -Dtest=ON .. && make test
