--- a/GLTF/CMakeLists.txt
+++ b/GLTF/CMakeLists.txt
@@ -35,9 +35,9 @@ if (test)
   file(GLOB TEST_HEADERS "test/include/*.h")
   file(GLOB TEST_SOURCES "test/src/*.cpp")
 
-  add_executable(${PROJECT_NAME}_TEST ${TEST_HEADERS} ${TEST_SOURCES})
+  add_executable(${PROJECT_NAME}_test ${TEST_HEADERS} ${TEST_SOURCES})
   target_link_libraries(${PROJECT_NAME}_TEST ${PROJECT_NAME} gtest)
 
-  add_test(GLTFAccessorTest ${PROJECT_NAME}_TEST)
-  add_test(GLTFObjectTest ${PROJECT_NAME}_TEST)
+  add_test(GLTFAccessorTest ${PROJECT_NAME}_test)
+  add_test(GLTFObjectTest ${PROJECT_NAME}_test)
 endif()
