--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,14 @@ addons:
     - cmake-data
 script: mkdir build && cd build && cmake -Dtest=ON .. && make && make test
 after_success:
-- if [ "$TRAVIS_BRANCH" == "master" ]; then
+  if [ "$TRAVIS_BRANCH" == "master" ]; then
     git config --global user.email "builds@travis-ci.com"
     git config --global user.name "Travis CI"
     git push origin :refs/tags/current
     git tag -f -a current -m "Live build of current master from Travis CI"
     git push --quiet https://${GH_TOKEN}@github.com/lasalvavida/COLLADA2GLTF -f --tags > /dev/null 2>&1
   fi
-- if [ "$TRAVIS_TAG" == "current"]; then
+  if [ ! -z "$TRAVIS_TAG"]; then
     tar cvzf COLLADA2GLTF-linux.tar.gz COLLADA2GLTF-bin libCOLLADA2GLTF.a GLTF/libGLTF.a
       dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/libCOLLADASaxFrameworkLoader.a
       dependencies/OpenCOLLADA/modules/COLLADASaxFrameworkLoader/COLLADAFramework/libCOLLADAFramework.a
