--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ set(PROJECT_NAME COLLADA2GLTF)
 project(${PROJECT_NAME})
 if(MSVC)
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
   set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
+  set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
   add_compile_options(-std=c++11 -lstdc++fs)
 endif()
@@ -62,8 +64,8 @@ if(test)
   file(GLOB TEST_HEADERS "test/include/*.h")
   file(GLOB TEST_SOURCES "test/src/*.cpp")
 
-  add_executable(${PROJECT_NAME}_test ${TEST_HEADERS} ${TEST_SOURCES})
-  target_link_libraries(${PROJECT_NAME}_test  ${PROJECT_NAME} GLTF gtest)
+  add_executable(${PROJECT_NAME}-test ${TEST_HEADERS} ${TEST_SOURCES})
+  target_link_libraries(${PROJECT_NAME}-test  ${PROJECT_NAME} GLTF gtest)
 
-  add_test(COLLADA2GLTFWriterTest ${PROJECT_NAME}_test)
+  add_test(COLLADA2GLTFWriterTest ${PROJECT_NAME}-test)
 endif()
