--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ before_build:
 
 build:
   parallel: true
-  project: cmake-build/COLLADA2GLTF.sln
+  project: cmake-build/COLLADA2GLTF.sln -G "Visual Studio 14 2015 Win64"
 
 test_script:
 - echo cmake-build/$(configuration)/COLLADA2GLTF-test.exe && cmake-build/GLTF/$(configuration)/GLTF-test.exe
