--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,11 +28,11 @@ install:
 before_build:
   - mkdir cmake-build
   - cd cmake-build
-  - cmake .. -Dtest=ON
+  - cmake .. -Dtest=ON -G "Visual Studio 14 2015 Win64"
 
 build:
   parallel: true
-  project: cmake-build/COLLADA2GLTF.sln -G "Visual Studio 14 2015 Win64"
+  project: cmake-build/COLLADA2GLTF.sln
 
 test_script:
 - echo cmake-build/$(configuration)/COLLADA2GLTF-test.exe && cmake-build/GLTF/$(configuration)/GLTF-test.exe
