--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,8 @@ install:
 before_build:
   - mkdir cmake-build
   - cd cmake-build
-  - IF "%PLATFORM%"=="x86" cmake .. -Dtest=ON -G "Visual Studio 14 2015"
-  - IF "%PLATFORM%"=="x64" cmake .. -Dtest=ON -G "Visual Studio 14 2015 Win64"
+  - IF "%PLATFORM%"=="x86" cmake -G "Visual Studio 14 2015" .. -Dtest=ON
+  - IF "%PLATFORM%"=="x64" cmake -G "Visual Studio 14 2015 Win64" .. -Dtest=ON
 
 build:
   parallel: true
