--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,8 +36,8 @@ build:
   project: cmake-build/COLLADA2GLTF.sln
 
 test_script:
-- cmake-build\$(configuration)\COLLADA2GLTF-test.exe
-- cmake-build\GLTF\$(configuration)\GLTF-test.exe
+- cmd: cmake-build\$(configuration)\COLLADA2GLTF-test.exe
+- cmd: cmake-build\GLTF\$(configuration)\GLTF-test.exe
 
 before_deploy:
   - 7z COLLADA2GLTF-windows-$(configuration)-$(platform).zip
