--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,13 +36,13 @@ build:
   project: cmake-build/COLLADA2GLTF.sln
 
 test_script:
-- ps: cmake-build\$env:CONFIGURATION\COLLADA2GLTF-test.exe
-- ps: cmake-build\GLTF\$env:CONFIGURATION\GLTF-test.exe
+- cmd: bin\COLLADA2GLTF-test.exe
+- cmd: bin\GLTF-test.exe
 
 before_deploy:
   - 7z COLLADA2GLTF-windows-%CONFIGURATION%-%PLATFORM%.zip
-      cmake-build\%CONFIGURATION%\COLLADA2GLTF-bin.exe
-      cmake-build\**\*.lib
+      bin\COLLADA2GLTF-bin.exe
+      **\*.lib
 
 artifacts:
   - path: COLLADA2GLTF-windows-$(configuration)-$(platform).zip
