Alright, let's try this

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,8 +36,9 @@ build:
   project: cmake-build/COLLADA2GLTF.sln
 
 test_script:
-- cmd: bin\COLLADA2GLTF-test.exe
-- cmd: bin\GLTF-test.exe
+- cmd: dir
+- cmd: cmake-build\%CONFIGURATION%\COLLADA2GLTF-test.exe
+- cmd: cmake-build\GLTF\%CONFIGURATION%\GLTF-test.exe
 
 before_deploy:
   - 7z COLLADA2GLTF-windows-%CONFIGURATION%-%PLATFORM%.zip
