--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,14 +4,14 @@ image: Visual Studio 2015
 matrix:
   fast_finish: true
   allow_failures:
-    - platform: x86
-      configuration: Debug
-    - platform: x64
-      configuration: Debug
-    - platform: x86
-      configuration: Release
-    - platform: x64
-      configuration: Release
+  - platform: x86
+    configuration: Debug
+  - platform: x64
+    configuration: Debug
+  - platform: x86
+    configuration: Release
+  - platform: x64
+    configuration: Release
 
 platform:
 - Win32
@@ -22,32 +22,31 @@ configuration:
 - Release
 
 install:
-  - powershell -Command "(gc .gitmodules) -replace 'git@github.com:', 'https://github.com/' | Out-File .gitmodules" -encoding UTF8
-  - git submodule update --init --recursive
+- powershell -Command "(gc .gitmodules) -replace 'git@github.com:', 'https://github.com/' | Out-File .gitmodules" -encoding UTF8
+- git submodule update --init --recursive
 
 before_build:
-  - mkdir cmake-build
-  - cd cmake-build
-  - IF "%PLATFORM%"=="Win32" cmake -G "Visual Studio 14 2015" .. -Dtest=ON
-  - IF "%PLATFORM%"=="x64" cmake -G "Visual Studio 14 2015 Win64" .. -Dtest=ON
+- mkdir cmake-build
+- cd cmake-build
+- IF "%PLATFORM%"=="Win32" cmake -G "Visual Studio 14 2015" .. -Dtest=ON
+- IF "%PLATFORM%"=="x64" cmake -G "Visual Studio 14 2015 Win64" .. -Dtest=ON
 
 build:
   parallel: true
   project: cmake-build/COLLADA2GLTF.sln
 
 test_script:
-- cmd: dir
-- cmd: cmake-build\%CONFIGURATION%\COLLADA2GLTF-test.exe
-- cmd: cmake-build\GLTF\%CONFIGURATION%\GLTF-test.exe
+- cmake-build\%CONFIGURATION%\COLLADA2GLTF-test.exe
+- cmake-build\GLTF\%CONFIGURATION%\GLTF-test.exe
 
 before_deploy:
-  - 7z COLLADA2GLTF-windows-%CONFIGURATION%-%PLATFORM%.zip
-      bin\COLLADA2GLTF-bin.exe
-      **\*.lib
+- 7z COLLADA2GLTF-windows-%CONFIGURATION%-%PLATFORM%.zip
+    %CONFIGURATION%\COLLADA2GLTF-bin.exe
+    **\*.lib
 
 artifacts:
-  - path: COLLADA2GLTF-windows-$(configuration)-$(platform).zip
-    name: built-zip
+- path: COLLADA2GLTF-windows-$(configuration)-$(platform).zip
+  name: built-zip
 
 deploy:
   description: Live build of current master from CI
