--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,12 +36,12 @@ build:
   project: cmake-build/COLLADA2GLTF.sln
 
 test_script:
-- %CONFIGURATION%\COLLADA2GLTF-test.exe
-- GLTF\%CONFIGURATION%\GLTF-test.exe
+- "%CONFIGURATION%"\COLLADA2GLTF-test.exe
+- GLTF\"%CONFIGURATION%"\GLTF-test.exe
 
 before_deploy:
-- 7z COLLADA2GLTF-windows-%CONFIGURATION%-%PLATFORM%.zip
-    %CONFIGURATION%\COLLADA2GLTF-bin.exe
+- 7z COLLADA2GLTF-windows-"%CONFIGURATION%"-"%PLATFORM%".zip
+    "%CONFIGURATION%"\COLLADA2GLTF-bin.exe
     **\*.lib
 
 artifacts:
