--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@ build:
   project: cmake-build/COLLADA2GLTF.sln
 
 after_build:
-- 7z COLLADA2GLTF-windows-"%CONFIGURATION%"-"%PLATFORM%".zip
+- 7z a COLLADA2GLTF-windows-"%CONFIGURATION%"-"%PLATFORM%".zip
   "%CONFIGURATION%"\COLLADA2GLTF-bin.exe
   **\*.lib
 
