--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,8 +37,18 @@ build:
 
 after_build:
 - 7z a COLLADA2GLTF-windows-"%CONFIGURATION%"-"%PLATFORM%".zip
-  "%CONFIGURATION%"\COLLADA2GLTF-bin.exe
-  **\*.lib
+  .\"%CONFIGURATION%"\COLLADA2GLTF-bin.exe
+  .\"%CONFIGURATION%"\COLLADA2GLTF.lib
+  .\GLTF\"%CONFIGURATION%"\GLTF.lib
+  .\dependencies\OpenCOLLADA\modules\COLLADASaxFrameworkLoader\"%CONFIGURATION%"\COLLADASaxFrameworkLoader.linb
+  .\dependencies\OpenCOLLADA\modules\COLLADASaxFrameworkLoader\COLLADAFramework\"%CONFIGURATION%"\COLLADAFramework.lib
+  .\dependencies\OpenCOLLADA\modules\COLLADASaxFrameworkLoader\COLLADAFramework\COLLADABaseUtils\"%CONFIGURATION%"\COLLADABaseUtils.lib
+  .\dependencies\OpenCOLLADA\modules\COLLADASaxFrameworkLoader\COLLADAFramework\COLLADABaseUtils\pcre\"%CONFIGURATION%"\pcre.lib
+  .\dependencies\OpenCOLLADA\modules\COLLADASaxFrameworkLoader\COLLADAFramework\MathMLSolver\"%CONFIGURATION%"\MathMLSolver.lib
+  .\dependencies\OpenCOLLADA\modules\COLLADASaxFrameworkLoader\GeneratedSaxParser\"%CONFIGURATION%"\GeneratedSaxParser.lib
+  .\dependencies\OpenCOLLADA\modules\COLLADASaxFrameworkLoader\GeneratedSaxParser\expat\"%CONFIGURATION%"\expat.lib
+  .\dependencies\OpenCOLLADA\modules\COLLADASaxFrameworkLoader\GeneratedSaxParser\LibXML\"%CONFIGURATION%"\LibXML.lib
+  .\dependencies\argparse\modules\argparse\"%CONFIGURATION%"\libargparse.lib
 
 test_script:
 - "%CONFIGURATION%\\COLLADA2GLTF-test.exe"
