--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ install:
 - git submodule update --init --recursive
 
 before_build:
-- mkdir -p cmake-build
+- if not exist cmake-build mkdir cmake-build
 - cd cmake-build
 - IF "%PLATFORM%"=="Win32" cmake -G "Visual Studio 14 2015" .. -Dtest=ON
 - IF "%PLATFORM%"=="x64" cmake -G "Visual Studio 14 2015 Win64" .. -Dtest=ON
