--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,8 +22,8 @@ configuration:
 - Release
 
 cache:
-- cmake-build/dependencies -> .gitmodules
-- cmake-build/GLTF/dependencies -> .gitmodules
+- cmake-build/dependencies -> appveyor.yml, .gitmodules
+- cmake-build/GLTF/dependencies -> appveyor.yml, .gitmodules
 
 install:
 - powershell -Command "(gc .gitmodules) -replace 'git@github.com:', 'https://github.com/' | Out-File .gitmodules" -encoding UTF8
